// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Buttons Default 1`] = `
<button
  className="btn primary"
>
  Comenzar
</button>
`;

exports[`Storyshots Atoms/Buttons Types 1`] = `
<div
  style={
    Object {
      "alignItems": "flex-end",
      "display": "flex",
      "gap": "2rem",
    }
  }
>
  <button
    className="btn primary"
  >
    Comenzar
  </button>
  <button
    className="btn secondary"
  >
    Comenzar
  </button>
  <button
    className="btn tertiary"
  >
    Comenzar
  </button>
  <button
    className="btn outline-primary"
  >
    Comenzar
  </button>
  <button
    className="btn outline-muted"
  >
    Comenzar
  </button>
</div>
`;

exports[`Storyshots Atoms/Heading Default 1`] = `
<h1
  className="heading color-base weight-bold"
>
  Hello
</h1>
`;

exports[`Storyshots Atoms/Icon Default 1`] = `
<div
  className="icon"
>
  <svg
    className="color-base"
    style={
      Object {
        "height": 35,
        "width": 35,
      }
    }
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <desc>
      caretDown
    </desc>
    <path
      d="M98 190.06l139.78 163.12a24 24 0 0036.44 0L414 190.06c13.34-15.57 2.28-39.62-18.22-39.62h-279.6c-20.5 0-31.56 24.05-18.18 39.62z"
    />
  </svg>
</div>
`;

exports[`Storyshots Atoms/Links Default 1`] = `
<a
  className="link"
>
  Link
</a>
`;

exports[`Storyshots Atoms/Links Sign Up 1`] = `
<a
  className="link"
>
  Iniciar sesion
</a>
`;

exports[`Storyshots Atoms/Paragraph Default 1`] = `
<p
  className="paragraph size-md color-base weight-normal"
>
  Hello World
</p>
`;

exports[`Storyshots Atoms/Paragraph Sizes 1`] = `
<div
  style={
    Object {
      "alignItems": "flex-end",
      "display": "flex",
      "gap": "2rem",
    }
  }
>
  <p
    className="paragraph size-sm color-base weight-normal"
  >
    Hello World
  </p>
  <p
    className="paragraph size-md color-base weight-normal"
  >
    Hello World
  </p>
  <p
    className="paragraph size-lg color-base weight-normal"
  >
    Hello World
  </p>
</div>
`;

exports[`Storyshots Atoms/Picture Default 1`] = `
<picture
  className="picture"
>
  <img
    src="https://picsum.photos/id/1033/400/400"
    style={
      Object {
        "height": "auto",
        "maxWidth": 200,
      }
    }
  />
</picture>
`;

exports[`Storyshots Molecules/Dropdown Select Language 1`] = `
<div
  className="container"
>
  <div
    className="icon"
    style={
      Object {
        "left": 5,
        "position": "absolute",
      }
    }
  >
    <svg
      className="color-inverted"
      style={
        Object {
          "height": 14,
          "width": 14,
        }
      }
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <desc>
        global
      </desc>
      <path
        d="M256 48C141.13 48 48 141.13 48 256s93.13 208 208 208 208-93.13 208-208S370.87 48 256 48z"
        stroke="currentColor"
        strokeMiterlimit="10"
        strokeWidth="26"
      />
      <path
        d="M256 48c-58.07 0-112.67 93.13-112.67 208S197.93 464 256 464s112.67-93.13 112.67-208S314.07 48 256 48z"
        stroke="currentColor"
        strokeMiterlimit="10"
        strokeWidth="26"
      />
      <path
        d="M117.33 117.33c38.24 27.15 86.38 43.34 138.67 43.34s100.43-16.19 138.67-43.34M394.67 394.67c-38.24-27.15-86.38-43.34-138.67-43.34s-100.43 16.19-138.67 43.34"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="26"
      />
      <path
        d="M256 48v416M464 256H48"
        stroke="currentColor"
        strokeMiterlimit="10"
        strokeWidth="26"
      />
    </svg>
  </div>
  <select
    className="select-language"
  >
    <option
      data-country="MX"
      data-language="es"
      lang="es"
      value="/mx/"
    >
      Español
    </option>
    <option
      data-country="MX"
      data-language="en"
      lang="en"
      value="/mx-en/"
    >
      English
    </option>
  </select>
  <div
    className="icon"
    style={
      Object {
        "position": "absolute",
        "right": 5,
      }
    }
  >
    <svg
      className="color-inverted"
      style={
        Object {
          "height": 14,
          "width": 14,
        }
      }
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <desc>
        caretDown
      </desc>
      <path
        d="M98 190.06l139.78 163.12a24 24 0 0036.44 0L414 190.06c13.34-15.57 2.28-39.62-18.22-39.62h-279.6c-20.5 0-31.56 24.05-18.18 39.62z"
      />
    </svg>
  </div>
</div>
`;
